--- a/meson_options.txt
+++ b/meson_options.txt
@@ -29,3 +29,7 @@ option('build_complex16', type: 'boolean', value: true, description: 'Build doub
 # From lapack-netlib
 option('realkind', type : 'string', value : 'd',
   description : 's: real32  d: real64  c: complex32  z: complex64')
+
+# Meson only
+# This is the equivalent of producing all precisions via make all inside lapack-netlib/blas/src
+option('build_all_prec', type: 'boolean', value: true, description: 'Build all precisions')
