--- a/lapack-netlib/meson.build
+++ b/lapack-netlib/meson.build
@@ -9,6 +9,16 @@ lapack_minor_version = 12
 lapack_patch_version = 0
 lapack_version = f'@lapack_major_version@.@lapack_minor_version@.@lapack_patch_version@'
 
-subdir('BLAS/SRC') # Defines blas and _allblas
+# Common variables
+prec = get_option('realkind')
+build_single = get_option('build_single')
+build_double = get_option('build_double')
+build_complex = get_option('build_complex')
+build_complex16 = get_option('build_complex16')
+build_all_prec = get_option('build_all_prec')
+use_c_lapack = get_option('use_c_lapack')
+
+# Sub-directories
+subdir('BLAS') # Defines blas and _allblas
 subdir('INSTALL') # Defines _install_aux and _int_cpu_time
 subdir('SRC') # Defines lapack
