--- a/meson_options.txt
+++ b/meson_options.txt
@@ -32,8 +32,9 @@ option('realkind', type : 'string', value : 'd',
 option('use_xblas', type : 'boolean', value : false,
   description : 'Build extended precision (needs XBLAS)')
 
-# From interface/Makefile
+# From / for interface/Makefile
 option('build_bfloat16', type: 'boolean', value: false, description: 'Build bfloat16')
+option('exprecision', type: 'boolean', value: false, description: 'Build the q suffixes')
 
 # Meson only
 # This is the equivalent of producing all precisions via make all inside lapack-netlib/blas/src
